# omni-transaction-rs

./: Cargo.toml  README.md  justfile
.github/actions/install-just/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: test.yml
src/: constants.rs  ethereum.rs  lib.rs  near.rs  transaction.rs  transaction_builder.rs  types.rs
src/bitcoin/: bitcoin_transaction.rs  bitcoin_transaction_builder.rs  constants.rs  mod.rs
src/bitcoin/encoding/: decode.rs  encode.rs  extensions.rs  macros.rs  mod.rs  utils.rs
src/bitcoin/types/: mod.rs  script_buf.rs  sighash.rs  transaction_type.rs  version.rs
src/bitcoin/types/lock_time/: constants.rs  height.rs  lock_time.rs  mod.rs  time.rs
src/bitcoin/types/tx_in/: hash.rs  mod.rs  outpoint.rs  sequence.rs  tx_id.rs  tx_in.rs  witness.rs
src/bitcoin/types/tx_out/: amount.rs  mod.rs  tx_out.rs
src/evm/: evm_transaction.rs  evm_transaction_builder.rs  mod.rs  types.rs  utils.rs
src/near/: mod.rs  near_transaction.rs  near_transaction_builder.rs  types.rs  utils.rs
src/near/types/: actions.rs  block_hash.rs  integers.rs  mod.rs  public_key.rs  signature.rs
src/near/utils/: mod.rs  public_key_utils.rs  signature_utils.rs
tests/: bitcoin_integration_test.rs  evm_integration_test.rs  near_integration_test.rs  transaction_integration_test.rs
tests/utils/: bitcoin_utils.rs  mod.rs
