[package]
name = "omni-transaction"
version = "0.1.0"
authors = ["Pagoda <hello@pagoda.co>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[dependencies]
rlp = "0.5.2"
hex = "0.4.3"
borsh = { version = "1.0.0", features = ["derive"] }
near-sdk = { version = "5.3.0" }
serde-big-array = "0.5.1"

[dev-dependencies]
# ethereum
alloy = { version = "0.2.1", features = ["full", "node-bindings", "rlp"] }
alloy-rlp = { version = "0.3.8", features = ["derive"] }
alloy-primitives = { version = "0.7.7" }

# near
near-primitives = { version = "0.24.1" }
near-crypto = { version = "0.24.1" }
near-workspaces = { version = "0.12.0", features = [
    "experimental",
    "unstable",
] }
near-jsonrpc-client = { version = "0.11.0" }
# async
tokio = { version = "1.38", features = ["full"] }

# misc
eyre = "0.6"
serde = "1.0"
serde_json = "1.0"
bs58 = "0.5.1"
